--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,7 @@ Authors@R: c(
     )
 Version: 0.1-1
 Date: 2017-02-21
-Description: Differentially Private Statistical Releases for Privacy
-    Preservation
+Description: This library allows researchers to access summary statistics of sensitive 		data that are generated using differential privacy.
 RoxygenNote: 6.0.1
 Collate:
     'DP-covariance.R'
