Using the MASS implementation of mpinv, including in DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,9 @@ Authors@R: c(
     )
 Version: 0.1-1
 Date: 2017-02-21
-Imports: jsonlite
+Imports: 
+	jsonlite, 
+	MASS
 Description: This library allows researchers to access summary statistics of sensitive 		data that are generated using differential privacy.
 RoxygenNote: 6.0.1
 Collate:
