Exporting functions with examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,21 @@ importFrom("stats", "qnorm", "rexp", "rnorm", "runif", "terms", "var")
 importFrom("utils", "head", "tail")
 
 export(censordata)
+export(check_histogram_mechanism)
+export(check_variable_type)
+export(checkepsilon)
+export(checkrange)
 export(covariance.release)
+export(dlap)
+export(dpNoise)
+export(dpUnif)
+export(extract.indices)
+export(make_logical)
 export(mechanismLaplace)
+export(plap)
+export(qlap)
 export(regression.release)
-
+export(rlap)
+export(rlaplace)
+export(sgn)
 exportClasses(mechanismLaplace)
