Exporting heavyhitters.release and updating NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(dlap)
 export(dpNoise)
 export(dpUnif)
 export(extract.indices)
+export(heavyhitters.release)
 export(make_logical)
 export(mechanismLaplace)
 export(plap)
