Exporting histogram.release and updating NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(dpNoise)
 export(dpUnif)
 export(extract.indices)
 export(heavyhitters.release)
+export(histogram.release)
 export(make_logical)
 export(mechanismLaplace)
 export(plap)
