--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,9 @@ export(extract.indices)
 export(heavyhitters.release)
 export(histogram.release)
 export(make_logical)
+export(mean.release)
 export(mechanismLaplace)
+export(mechanism.laplace)
 export(plap)
 export(qlap)
 export(regression.release)
