Updating mean.release parameters, examples, NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ import(jsonlite, matrixcalc, methods, openssl)
 importFrom("stats", "qnorm", "rexp", "rnorm", "runif", "terms", "var")
 importFrom("utils", "head", "tail")
 
+S3method(mean, release)
+
 export(censordata)
 export(check_histogram_mechanism)
 export(check_variable_type)
@@ -11,6 +13,7 @@ export(checkepsilon)
 export(checkrange)
 export(covariance.release)
 export(dlap)
+export(dp.mean)
 export(dpNoise)
 export(dpUnif)
 export(extract.indices)
@@ -18,8 +21,8 @@ export(heavyhitters.release)
 export(histogram.release)
 export(make_logical)
 export(mean.release)
-export(mechanismLaplace)
 export(mechanism.laplace)
+export(mechanismLaplace)
 export(plap)
 export(qlap)
 export(regression.release)
