--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,6 @@ export(checkepsilon)
 export(checkrange)
 export(covariance.release)
 export(dlap)
-export(dp.mean)
 export(dpNoise)
 export(dpUnif)
 export(extract.indices)
@@ -30,4 +29,5 @@ export(regression.release)
 export(rlap)
 export(rlaplace)
 export(sgn)
+export(variance.release)
 exportClasses(mechanismLaplace)
