--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,9 @@ import(jsonlite, methods, openssl)
 importFrom("stats", "qnorm", "rexp", "rnorm", "runif", "terms", "var")
 importFrom("utils", "head", "tail")
 
-S3method(mean, release)
-
+S3method(mean,release)
+S3method(quantile,release)
+export(binary.tree)
 export(censordata)
 export(check_histogram_mechanism)
 export(check_variable_type)
@@ -13,6 +14,11 @@ export(checkepsilon)
 export(checkrange)
 export(covariance.release)
 export(dlap)
+export(dp.covariance)
+export(dp.heavyhitters)
+export(dp.histogram)
+export(dp.mean)
+export(dp.variance)
 export(dpNoise)
 export(dpUnif)
 export(extract.indices)
