Editing exponential mechanism example, NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(heavyhitters.release)
 export(histogram.release)
 export(make_logical)
 export(mean.release)
+export(mechanism.exponential)
 export(mechanism.gaussian)
 export(mechanism.laplace)
 export(mechanismLaplace)
