Updating NAMESPACE, examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,11 @@ export(dlap)
 export(dp.covariance)
 export(dp.heavyhitters)
 export(dp.histogram)
+export(dp.logit)
 export(dp.mean)
+export(dp.ols)
+export(dp.poisson)
+export(dp.probit)
 export(dp.variance)
 export(dpNoise)
 export(dpUnif)
