Push updates to documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,14 @@ export(checkrange)
 export(coefficient.release)
 export(dlap)
 export(dpCovariance)
+export(dpGLM)
+export(dpHeavyHitters)
+export(dpHistogram)
+export(dpMean)
 export(dpNoise)
+export(dpTree)
 export(dpUnif)
+export(dpVariance)
 export(extract.indices)
 export(fillMissing)
 export(fillMissing2d)
@@ -26,6 +32,12 @@ export(qlap)
 export(rlap)
 export(sgn)
 exportClasses(dpCovariance)
+exportClasses(dpGLM)
+exportClasses(dpHeavyHitters)
+exportClasses(dpHistogram)
+exportClasses(dpMean)
+exportClasses(dpTree)
+exportClasses(dpVariance)
 exportClasses(mechanism)
 exportClasses(mechanismBootstrap)
 exportClasses(mechanismExponential)
