--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,11 @@ export(dpVariance)
 export(extract.indices)
 export(fillMissing)
 export(fillMissing2d)
+export(histogram.getAccuracy)
+export(histogram.getParameters)
 export(make_logical)
+export(mean.getAccuracy)
+export(mean.getParameters)
 export(mechanism)
 export(mechanismBootstrap)
 export(mechanismExponential)
