--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,3 +49,4 @@ exportClasses(mechanismGaussian)
 exportClasses(mechanismLaplace)
 exportClasses(mechanismObjective)
 import(methods)
+import(stats)
