--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,8 @@ export(plap)
 export(qlap)
 export(rlap)
 export(sgn)
+export(tree.getAccuracy)
+export(tree.getParameters)
 exportClasses(dpCovariance)
 exportClasses(dpGLM)
 exportClasses(dpHeavyHitters)
