Add documentation and checks, adjust format to mean programs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(histogram.getAccuracy)
 export(histogram.getParameters)
 export(make_logical)
 export(mean.getAccuracy)
+export(mean.getCI)
 export(mean.getParameters)
 export(mechanism)
 export(mechanismBootstrap)
