Push changes to documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ export(dpUnif)
 export(dpVariance)
 export(fillMissing)
 export(fillMissing2d)
+export(glm.getAccuracy)
+export(glm.getParameters)
 export(histogram.getAccuracy)
 export(histogram.getParameters)
 export(make_logical)
