export release2json()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(mechanismLaplace)
 export(mechanismObjective)
 export(plap)
 export(qlap)
+export(release2json)
 export(rlap)
 export(sgn)
 export(tree.getAccuracy)
