--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,7 @@ Suggests:
     rmarkdown,
     testthat
 Collate: 
+    'CompositionTheorems.R'
     'createJSON.R'
     'datasets.R'
     'mechanism.R'
