--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,7 @@ Suggests:
     testthat
 Collate: 
     'CompositionTheorems.R'
+    'update_parameters.R'
     'createJSON.R'
     'datasets.R'
     'mechanism.R'
