add histogram vignette, after removing from MF_MakingVignettes branch

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,7 @@ export(fillMissing)
 export(glm.getAccuracy)
 export(glm.getParameters)
 export(histogram.getAccuracy)
-export(histogram.getParameters)
+export(histogram.getEpsilon)
 export(make_logical)
 export(mean.getAccuracy)
 export(mean.getCI)
