--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(rlap)
 export(sgn)
 export(tree.getAccuracy)
 export(tree.getParameters)
+exportClasses(GenLaplace)
 exportClasses(dpCovariance)
 exportClasses(dpGLM)
 exportClasses(dpHeavyHitters)
