--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,12 +30,14 @@ export(mechanismExponential)
 export(mechanismGaussian)
 export(mechanismLaplace)
 export(mechanismObjective)
+export(mechanismSnapping)
 export(mechanismStability)
 export(plap)
 export(qlap)
 export(release2json)
 export(rlap)
 export(sgn)
+export(snappingNoise)
 export(tree.getAccuracy)
 export(tree.getParameters)
 exportClasses(dpCovariance)
@@ -51,6 +53,7 @@ exportClasses(mechanismExponential)
 exportClasses(mechanismGaussian)
 exportClasses(mechanismLaplace)
 exportClasses(mechanismObjective)
+exportClasses(mechanismSnapping)
 exportClasses(mechanismStability)
 import(methods)
 import(stats)
