move histogram and mean utility functions to separate files from statistics, confirm mean statistic test code coverage

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(checkEpsilon)
 export(checkRange)
 export(checkVariableType)
 export(coefficientRelease)
-export(dlap)
+export(dLap)
 export(dpCovariance)
 export(dpGLM)
 export(dpHeavyHitters)
@@ -30,10 +30,10 @@ export(mechanismGaussian)
 export(mechanismLaplace)
 export(mechanismObjective)
 export(mechanismStability)
-export(plap)
-export(qlap)
+export(pLap)
+export(qLap)
+export(rLap)
 export(release2json)
-export(rlap)
 export(sgn)
 export(treeGetAccuracy)
 export(treeGetParameters)
