--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,6 @@ Suggests:
     testthat
 Collate: 
     'CompositionTheorems.R'
-    'createJSON.R'
     'datasets.R'
     'mechanism.R'
     'mechanism-bootstrap.R'
@@ -42,6 +41,7 @@ Collate:
     'utilities-covariance.R'
     'utilities-data-validation.R'
     'utilities-histogram.R'
+    'utilities-mean.R'
     'utilities-noise-generation.R'
     'utilities-objective.R'
     'utilities-postprocessing.R'
