covariance merge conflict fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(dpNoise)
 export(dpTree)
 export(dpUnif)
 export(dpVariance)
+export(extractIndices)
 export(fillMissing)
 export(glmGetAccuracy)
 export(glmGetParameters)
