expanding testing, refactoring,utilities

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,9 +39,11 @@ Collate:
     'statistic-variance.R'
     'update_parameters.R'
     'utilities-categorical.R'
+    'utilities-composition.R'
     'utilities-covariance.R'
     'utilities-data-validation.R'
     'utilities-histogram.R'
+    'utilities-input-validation.R'
     'utilities-noise-generation.R'
     'utilities-objective.R'
     'utilities-postprocessing.R'
