--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,6 @@
 
 export(bootstrapReplication)
 export(censorData)
-export(checkEpsilon)
-export(checkRange)
-export(checkVariableType)
 export(coefficientRelease)
 export(dLap)
 export(dpCovariance)
@@ -16,6 +13,7 @@ export(dpNoise)
 export(dpTree)
 export(dpUnif)
 export(dpVariance)
+export(extractIndices)
 export(fillMissing)
 export(glmGetAccuracy)
 export(glmGetParameters)
