--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(dpHeavyHitters)
 export(dpHistogram)
 export(dpMean)
 export(dpNoise)
+export(dpSampleAndAggregate)
 export(dpTree)
 export(dpUnif)
 export(dpVariance)
@@ -42,6 +43,7 @@ exportClasses(dpGLM)
 exportClasses(dpHeavyHitters)
 exportClasses(dpHistogram)
 exportClasses(dpMean)
+exportClasses(dpSampleAndAggregate)
 exportClasses(dpTree)
 exportClasses(dpVariance)
 exportClasses(mechanism)
