branch to save heavyhitters statistic on. do not delete but also don't merge without changing to make DP

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,7 @@ Collate:
     'mechanism-stability.R'
     'statistic-covariance.R'
     'statistic-glm.R'
+    'statistic-heavyhitters.R'
     'statistic-histogram.R'
     'statistic-mean.R'
     'statistic-tree.R'
