--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(coefficientRelease)
 export(dLap)
 export(dpCovariance)
 export(dpGLM)
+export(dpHeavyHitters)
 export(dpHistogram)
 export(dpMean)
 export(dpNoise)
@@ -38,6 +39,7 @@ export(treeGetAccuracy)
 export(treeGetParameters)
 exportClasses(dpCovariance)
 exportClasses(dpGLM)
+exportClasses(dpHeavyHitters)
 exportClasses(dpHistogram)
 exportClasses(dpMean)
 exportClasses(dpTree)
